--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json --port 3000",
+    "dev:all": "vite && json-server --watch db.json --port 3000"
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
