--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "server": "json-server --watch db.json --port 3000",
-    "dev:all": "vite && json-server --watch db.json --port 3000"
+    "dev:all": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
+    "concurrently": "^9.2.0",
     "vite": "^7.0.4",
     "vite-plugin-vuetify": "^2.1.2",
     "vuetify": "^3.9.4"
